printrun (0.0.4) oneiric natty maverick precise squeeze wheezy sid; urgency=low

  * initial debian package

 -- Richard Ulrich <richi@paraeasy.ch>  Mon, 14 Nov 2011 22:30:00 +0200
