@@ -15,5 +15,5 @@ Description: A host software for the RepRap 3d printer. It works well with the t
 Package: printrun-gui
 Architecture: all
 Essential: no
-Depends: ${misc:Depends}, menu, printrun-base, python-wxgtk2.8
+Depends: ${misc:Depends}, menu, printrun-base, python-wxgtk2.8, python-tk, skeinforge
 Description: A host software for the RepRap 3d printer. It works well with the teacup firmware and Gen7 electronics.
