@@ -1,6 +1,13 @@
+printrun (0.0.5~ubuntu) precise oneiric natty maverick; urgency=low
+
+  * coupling with the new skeinforge deb
+
+ -- Richard Ulrich <richi@paraeasy.ch>  Wed, 7 Dec 2011 22:10:00 +0100
+
 printrun (0.0.4) oneiric natty maverick precise squeeze wheezy sid; urgency=low
 
   * initial debian package
 
  -- Richard Ulrich <richi@paraeasy.ch>  Mon, 14 Nov 2011 22:30:00 +0200
+
 
